--- a/yt-videos.html
+++ b/yt-videos.html
@@ -4,13 +4,15 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
 	<title>code with mohit videos</title>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8623190965366361"
+     crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="video.css">
     <link rel="icon" href="img/code2.png">
 	<header>
 		<nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
-			
+
 			<div class="container">
-					<nav class="navbar navbar-dark bg-primary">
+				<nav class="navbar navbar-dark bg-primary">
 						<div class="container">
 						  <a class="navbar-brand" href="">
 							<img src="img/code2.png" alt="" width="50" height="44">&nbsp;&nbsp;&nbsp;&nbsp;code with mohit
@@ -23,27 +25,39 @@
     </button>
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<li class="nav-item">
-						<a href="home" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-						  <a href="courses" class="nav-link">Courses</a>
-						</li>
-						<li class="nav-item">
-						  <a href="404" class="nav-link">About-US</a>
-						</li>
-						<li class="nav-item">
-						  <a href="contact" class="nav-link">Contact</a>
-						</li>
-							<li class="nav-item">
-						  <a href="yt-videos" class="nav-link">YT-Videos</a>
-						</li>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<li class="nav-item">
+	<a href="home" class="nav-link">Home</a>
+	</li>
+	<li class="nav-item">
+		<a href="courses" class="nav-link">Courses</a>
+	</li>
+	<li class="nav-item">
+		<a href="404" class="nav-link">About</a>
+	</li>
+	<li class="nav-item">
+		<a href="contact" class="nav-link">Contact</a>
+	</li>
+			<li class="nav-item">
+		<a href="yt-videos" class="nav-link">Videos</a>
+	</li>
+	<li class="nav-item">
+		<a href="https://chat.ytcodewithmohit.tech/" class="nav-link">chat</a>
+		</li>
 				</ul>
 			</div>
 		</div>
 		</div>
+		
+		<div class="container-fluid">
+			<br>
+			<form class="d-flex">
+				<ci-search></ci-search>
+			</form>
+		  </div>
+
 		</nav>
+
 	</header>
 	<script data-ad-client="ca-pub-8623190965366361" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
@@ -104,6 +118,17 @@
 </div>
 </div>
 <br><br>
+<script>
+	(function() {
+	  var id = '797ad5d6-1f11-11ec-bccf-0242ac130002';
+	  var ci_search = document.createElement('script');
+	  ci_search.type = 'text/javascript';
+	  ci_search.async = true;
+	  ci_search.src = 'https://cse.expertrec.com/api/js/ci_common.js?id=' + id;
+	  var s = document.getElementsByTagName('script')[0];
+	  s.parentNode.insertBefore(ci_search, s);
+	})();
+	</script>
 <div class="video">
 	
 	<div class="vs1"><a href="Video9"><img src="img/9.jpg" width="400px">
