--- a/Video2.html
+++ b/Video2.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8623190965366361"
+	crossorigin="anonymous"></script>
 	<title>#2 installing text editor in tamil</title>
 	<link rel="stylesheet" href="video.css">
 <link rel="icon" href="img/code2.png">
-
+<script src="index.js"></script>
 </head>
 <body>
 	<div class="responsive-youtube">
