--- a/404.html
+++ b/404.html
@@ -6,12 +6,12 @@
 	<script data-ad-client="ca-pub-8623190965366361" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<header>
 		<nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
-			
+
 			<div class="container">
-					<nav class="navbar navbar-dark bg-primary">
+				<nav class="navbar navbar-dark bg-primary">
 						<div class="container">
 						  <a class="navbar-brand" href="">
-							<img src="img/code2.png" alt="" width="50" height="44">&nbsp;&nbsp;&nbsp;&nbsp;code with mohit.com
+							<img src="img/code2.png" alt="" width="50" height="44">&nbsp;&nbsp;&nbsp;&nbsp;code with mohit
 						  </a>
 						</div>
 					  </nav>
@@ -21,33 +21,55 @@
     </button>
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<li class="nav-item">
-						<a href="home" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-						  <a href="courses" class="nav-link">Courses</a>
-						</li>
-						<li class="nav-item">
-						  <a href="404" class="nav-link">About-US</a>
-						</li>
-						<li class="nav-item">
-						  <a href="contact" class="nav-link">Contact</a>
-						</li>
-							<li class="nav-item">
-						  <a href="yt-videos" class="nav-link">YT-Videos</a>
-						</li>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<li class="nav-item">
+	<a href="home" class="nav-link" target="blank">Home</a>
+	</li>
+	<li class="nav-item">
+		<a href="courses" class="nav-link" target="blank">Courses</a>
+	</li>
+	<li class="nav-item">
+		<a href="404" class="nav-link" target="blank">About</a>
+	</li>
+	<li class="nav-item">
+		<a href="contact" class="nav-link" target="blank">Contact</a>
+	</li>
+			<li class="nav-item">
+		<a href="yt-videos" class="nav-link" target="blank">Videos</a>
+	</li>
+	<li class="nav-item">
+		<a href="https://chat.ytcodewithmohit.tech/" class="nav-link" target="blank">chat</a>
+	</li>
 				</ul>
 			</div>
 		</div>
 		</div>
+		
+		<div class="container-fluid">
+			<br>
+			<form class="d-flex">
+				<ci-search></ci-search>
+			</form>
+		  </div>
+
 		</nav>
+
 	</header>
 	<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
 
 </head> 
 <body>
-
+	<script>
+		(function() {
+		  var id = '797ad5d6-1f11-11ec-bccf-0242ac130002';
+		  var ci_search = document.createElement('script');
+		  ci_search.type = 'text/javascript';
+		  ci_search.async = true;
+		  ci_search.src = 'https://cse.expertrec.com/api/js/ci_common.js?id=' + id;
+		  var s = document.getElementsByTagName('script')[0];
+		  s.parentNode.insertBefore(ci_search, s);
+		})();
+		</script>
 		<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/bootstrap.min.js"></script>
 	<!-- Read the Formbutton docs at formspree.io/formbutton/docs. See more examples at codepen.io/formspree -->
@@ -96,7 +118,7 @@
 <br><br><br><br><br><br><br>
 <center>
 	<br>
-<h1>we are building this page please visit again </h1><br>
+<h1>url is invalid please check and try again</h1><br>
 </center>
 </body>
 </html>
